Fixed a few layout issues in the GDB

--- a/scss/_tweet.scss
+++ b/scss/_tweet.scss
@@ -258,12 +258,6 @@
     }
   }
 
-  @include media-breakpoint-up(md) {
-    &.oneblock:not(.right) {
-      max-height: unset;
-    }
-  }
-
   &.hide-reply .tweet-text a.mention:first-child { display: none; }
 
   &.collapse:not(.grid-row) {
